@@ -1,6 +1,6 @@
 {
     "name": "LavaBlock",
-    "version": "0.0.2",
+    "version": "0.0.3",
     "title": "LavaBlock",
     "author": "Szabó Zoltán",
     "factorio_version": "2.0",
@@ -8,5 +8,5 @@
         "base >= 2.0",
         "space-age"
     ],
-    "description": "Start on a tiny island surrounded by lava! Extract all resources from lava using chemical plants. No traditional mining - convert lava into stone, coal, iron, copper & wood. Expand your island only through research-unlocked landfill. Custom map preset, modified tech tree, extreme space constraints create unique survival challenge. Perfect for players seeking fresh Factorio experience!"
+    "description": "Start on a tiny island surrounded by lava! Extract all resources from lava using chemical plants. No traditional mining - convert lava into stone, coal, iron, copper & wood. Expand your island only through research-unlocked foundation. Custom map preset, modified tech tree, extreme space constraints create unique survival challenge. Perfect for players seeking fresh Factorio experience!"
 }
