@@ -1,7 +1,7 @@
 [lava-block]
 on-start-mechanics-explanation-1=[img=info] Welcome to Lava Block! If you're not on a small island please return to the main screen and choose the "lava-block" map generation mode.
 on-start-mechanics-explanation-2=[img=info] If your starting island is made of landfill you can re-arrange it by clicking your hotbar and adding a landfill icon to it. This will let you mine landfill without bots, even if it's all placed.
-on-start-mechanics-explanation-3=[img=info] Don't forget you start on landfill! But you can't place it to lava, it will not help you in the early stage.
+on-start-mechanics-explanation-3=[img=info] Don't forget, you start on landfill! But you can't place it on lava tile, it will not help you in the early stage the removing it.
 [mod-setting-name]
 lava-block-landfill-distribution-strategy=Landfill distribution strategy
 lava-block-landfill-multiplier=Landfill multiplier
@@ -62,5 +62,6 @@ copper-smelting=Copper Smelting
 brick-smelting=Brick Smelting
 iron-clearing=Iron Clearing
 steam-generation=Steam Generation
+calcite-synthesis=Calcite Synthesis
 
 [entity-name]
